# langgraph-demo

./: .gitignore  README.md  pyproject.toml
coalagent/demo1/: demo1.py  getcoal.py
coalagent/demo1/prompt/: summarize.prompt
coalagent/demo2/: demo2.py  getcoal.py
coalagent/demo2/prompt/: data_filter.prompt  group_tilte.prompt  summarize_group_data.prompt
coalagent/demo3/: chainlit.py  check_result_agent.py  demo3.py  execution_agent.py  load_prompt.py  plan_agent.py  replan_agent.py  server.py  state.py  tools.py
coalagent/demo3/patch/: langchain_patch.py
coalagent/demo3/prompt/: checker.prompt  excute_by_llm.prompt  get_url.prompt  json_fix.prompt  plan.prompt  replan.prompt  search_query.prompt  tool_choose.prompt  use_tool.prompt
codeagent/: graph.py  state.py  workflow.py
glm4/: agent.py  chainlit.py
glm4long/: agent.py  chainlit.py  test.py
ipynb/: customer-support.ipynb  plan-and-execute.ipynb
toolscall/: tool_call_messages.py
utils/: general_utils.py
werewolf/: Readme.md  chainlit.py  host_agent.py  human_agent.py  load_prompt.py  role_agent.py  server.py  state.py  wolf_game.py
werewolf/prompt/: choose_speaker.prompt  role.prompt  vote.prompt
