[tool.poetry]
name = "langgraph-lesson"
version = "0.1.0"
description = ""
authors = ["fxx <q2wxec@126.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-community = "^0.2.0rc1"
langchain = "^0.2.0rc2"
langgraph = "^0.0.46"
langchain-openai = "^0.1.3"
bs4 = "^0.0.2"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
langsmith = "^0.1.53"
langchainhub = "^0.1.15"
duckduckgo-search = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"