[tool.poetry]
name = "langgraph-lesson"
version = "0.1.0"
description = ""
authors = ["fxx <q2wxec@126.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-community = "^0.2.1"
langchain = "^0.2.1"
langgraph = "^0.0.55"
langchain-openai = "^0.1.7"
bs4 = "^0.0.2"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
langsmith = "^0.1.63"
langchainhub = "^0.1.15"
duckduckgo-search = "^5.3.0"
langserve = {extras = ["all"], version = "^0.2.1"}
langgraph-cli = "^0.1.23"
chainlit = "^1.1.202"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"